Prevent line wrapping in study annotators table

--- a/web_external/Studies/studyPage.styl
+++ b/web_external/Studies/studyPage.styl
@@ -22,6 +22,7 @@
 
   th
   td
+    white-space nowrap
     padding-right 20px
 
     &:last-child
